--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,28 @@
         android:theme="@style/Theme.Project25"
         tools:targetApi="31">
         <activity
+            android:name=".PilihLevelActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GameDadu"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Login"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".PilihGameActivity"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Register"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".HalamanUtama"
             android:exported="false"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
