--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/Theme.Project25"
         tools:targetApi="31">
         <activity
+            android:name=".rute"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".HasilQuiz"
             android:exported="false"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".GameDadu"
             android:exported="false"
