--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Project25"
         tools:targetApi="31">
         <activity
+            android:name=".GameUang"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".rute"
             android:exported="false"
             android:screenOrientation="landscape" />
