--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Project25"
         tools:targetApi="31">
         <activity
+            android:name=".GameBuah"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".GameNomor"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".GameBentuk"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".LeaderboardActivity"
             android:exported="false"
             android:screenOrientation="landscape" />
